[tool.poetry]
name = "mixture-learning"
version = "0.1.0"
description = ""
authors = ["Omar Ali Sheikh <sheikhomar@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8"
scipy = "^1.8.0"
numpy = "^1.21"
seaborn = "^0.11.2"
pandas = "^1.4.1"
fastdist = "^1.1.3"
click = "^8.1.0"
scikit-learn = "^1.0.2"
numba = "^0.55.1"
psutil = "^5.9.0"
dacite = "^1.6.0"
pyarrow = "^7.0.0"
networkx = "^2.8"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.3.2"
jupyter-dash = "^0.4.1"
plotly = "^5.6.0"
openpyxl = "^3.0.9"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
